complete main parts